syntax = "proto3";
package symphony.incentives;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "symphony/incentives/group.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/incentives/types";

// CreateGroupsProposal is a type for creating one or more groups via
// governance. This is useful for creating groups without having to pay
// creation fees.
message CreateGroupsProposal {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title = 1;
  string description = 2;

  repeated symphony.incentives.CreateGroup create_groups = 3
      [ (gogoproto.nullable) = false ];
}
